# llm-sdg-classifier

./: .env.sample  .gitignore  .python-version  README.md  pyproject.toml
classifiers/: __init__.py
classifiers/archive/chatgpt_meike/: README.md  prompts.yaml  stats.csv
classifiers/archive/chatgpt_meike_old/: README.md  start  stats.csv
classifiers/archive/chatgpt_meike_updated/: README.md  stats.csv
classifiers/archive/informed_zeroshot_ml_gpt/: informed_zeroshot_gpt.py
classifiers/chatgpt_informed_prompt/: README.md  prompts.yaml  stats.csv
classifiers/chatgpt_informed_prompt/runs/1e1a9c9/: meta.json  results.csv  stats.csv
classifiers/chatgpt_informed_prompt/runs/7c7fa81/: stats.csv
classifiers/chatgpt_meike/: README.md  chatgpt_meike.py  prompts.yaml  start  stats.csv
classifiers/chatgpt_meike_updated/: prompts.yaml
classifiers/chatgpt_meike_updated_all/: chatgpt_meike_updated_all.py
classifiers/chatgpt_sdgs/: README.md  chatgpt_sdgs.py  prompts.yaml  stats.csv
classifiers/chatgpt_topics_hmc/: README.md  chatgpt_topics_hmc.py  prompts.yaml  stats.csv  topics.yaml
classifiers/core/: BaseClassifier.py  Parameters.py  README.md.jinja  Run.py
classifiers/llama_informed_prompt/: llama3.py
classifiers/oneshot_sl_gpt/: oneshot_sl_gpt.py  prompts.yaml
evaluations/: BaseClassifier.py  Config.py  ConfigSet.py  Run.py  __init__.py
evaluations/chatgpt_sdgs/: README.md  chatgpt_sdgs.py
lib/sdg_benchmark/: SdgBenchmark.py  SdgBenchmarkStats.py  __init__.py
scripts/: debug.py  evaluate.py  update_files.py  update_readme.py
(+41 files in other folders)
